# summarize_cli_tool_hugging_face_streamlit

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.streamlit/: config.toml
src/summarize_tool/: app.py  main.py
tests/: datascience_wikipedia.txt
