[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project]
name = "summarize"
version = "0.0.1"
description = "Demo Python CLI tool and Streamlit app to summarize text using HuggingFace"
authors = [
    { name = "Francisco Almeida"},
    { name = "Alfredo Deza"} 
]
requires-python = ">=3.8"
urls = { homepage = "https://github.com/alfredodeza/huggingface-summarization" }

dependencies = [
    "transformers",
    "click",
    "tensorflow",
    "beautifulsoup4",
    "requests",
    "streamlit",
    "tf-keras",
    "Python-IO"
]


[project.scripts]
summarize = "src.summarize_tool.main:main"


[server]
headless = false
enableCORS = false
port = 8501  # Default port